# advent-of-code-2021

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: day-00.cpp  day-01.cpp  day-02.cpp
